# HPC_Experiments

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Pipeline  README.md  optimization_results.db  out.folded  perf.data  plot_init_methods.py  plot_solutions.py
benchmark-solutions/: C101.txt
benchmarks/: CMakeLists.txt  bench_StochasticLocalSearch.cpp  bench_basic.cpp  bench_ortools.cpp  test_basic.cpp
scripts/: analyze_stats.py  visualize_init_solutions.py
src/: VRPTW_Intance.c  allocators.cpp  allocators.h  array.h  entrypoint.cpp  problem_instance.cpp  problem_instance.h  util.h  utils.h
src/Michi/: Makefile  Pipeline.c  VRPTW_Instance.h  VRPTW_Intance.c
src/Solvers/: InsertionHeuristicComparison.cpp  LocalSearchDescent.cpp  LocalSearchDescent.h  StochasticLocalSearch.cpp  StochasticLocalSearch.h
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/: Makefile
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/assignment_groups_mip/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/assignment_groups_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/assignment_linear_sum_assignment/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/assignment_min_flow/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/assignment_mip/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/assignment_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/assignment_task_sizes_mip/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/assignment_task_sizes_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/assignment_teams_mip/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/assignment_teams_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/assumptions_sample_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/balance_min_flow/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/basic_example/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/bfs_directed/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/bfs_one_to_all/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/bfs_undirected/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/bin_packing_mip/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/binpacking_2d_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/binpacking_problem_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/bool_or_sample_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/cgc/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/cgc_main/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/channeling_sample_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/clone_model_sample_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/constraint_programming_cp/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/costas_array_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/cp_is_fun_cp/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/cp_is_fun_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/cp_sat_example/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/cryptarithm_sat/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/cvrp_disjoint_tw/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/cvrptw/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/cvrptw_soft_capacity/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/cvrptw_with_breaks/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/examples/cvrptw_with_precedences/: CMakeLists.txt
submodules/or-tools_x86_64_Ubuntu-24.04_cpp_v9.15.6755/lib/: libCbcSolver.so.2.10.12  libClpSolver.so.1.17.10  libabsl_base.so.2508.0.0  libabsl_city.so.2508.0.0  libabsl_civil_time.so.2508.0.0  libabsl_cord.so.2508.0.0  libabsl_cord_internal.so.2508.0.0  libabsl_cordz_functions.so.2508.0.0  libabsl_cordz_handle.so.2508.0.0  libabsl_cordz_info.so.2508.0.0  libabsl_cordz_sample_token.so.2508.0.0  libabsl_crc32c.so.2508.0.0  libabsl_crc_cord_state.so.2508.0.0  libabsl_crc_cpu_detect.so.2508.0.0  libabsl_crc_internal.so.2508.0.0  libabsl_debugging_internal.so.2508.0.0  libabsl_decode_rust_punycode.so.2508.0.0  libabsl_demangle_internal.so.2508.0.0  libabsl_demangle_rust.so.2508.0.0  libabsl_die_if_null.so.2508.0.0  libabsl_examine_stack.so.2508.0.0  libabsl_exponential_biased.so.2508.0.0  libabsl_failure_signal_handler.so.2508.0.0  libabsl_flags_commandlineflag.so.2508.0.0  libabsl_flags_commandlineflag_internal.so.2508.0.0  libabsl_flags_config.so.2508.0.0  libabsl_flags_internal.so.2508.0.0  libabsl_flags_marshalling.so.2508.0.0  libabsl_flags_parse.so.2508.0.0  libabsl_flags_private_handle_accessor.so.2508.0.0  libabsl_flags_program_name.so.2508.0.0  libabsl_flags_reflection.so.2508.0.0  libabsl_flags_usage.so.2508.0.0  libabsl_flags_usage_internal.so.2508.0.0  libabsl_graphcycles_internal.so.2508.0.0  libabsl_hash.so.2508.0.0  libabsl_hashtable_profiler.so.2508.0.0  libabsl_hashtablez_sampler.so.2508.0.0  libabsl_int128.so.2508.0.0  libabsl_kernel_timeout_internal.so.2508.0.0  (+63 more)
tests/: CMakeLists.txt  test_allocators.cpp  test_array.cpp  test_cuda_availability.cpp  test_parser.cpp
(+353 files in other folders)
